--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
     box-sizing: border-box;
     margin: 0;
-    background-color: #D6A772;
+    background-color: #D66551;
     font-family: 'Molengo', sans-serif;
 }
 
