--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ main {
     height: 60%;
     margin: 50px auto;
     /* margin-top: 10px; */
-    background-color: #FFE3A1;
+    background-color: #FFff33;
     border-radius: 30px;
     border: 10px solid #303847;
     display: flex;
@@ -94,7 +94,7 @@ main {
     /* border: 2px solid black; */
     border: none;
     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.7);
-    color: #FFE3A1;
+    color: #FFff33;
 }
 .box-button:hover {
     background-color:#303847;
